--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"aos": "^2.3.4",
 		"core-js": "^3.8.3",
 		"node-sass": "^9.0.0",
-		"vue": "^3.2.13"
+		"vue": "^3.2.13",
+		"vue3-carousel": "^0.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
