--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"aos": "^2.3.4",
+		"axios": "^1.4.0",
 		"core-js": "^3.8.3",
 		"node-sass": "^9.0.0",
 		"vue": "^3.2.13",
